--- a/NET8_OpenAPI_Custom/wwwroot/swagger-ui/custom.css
+++ b/NET8_OpenAPI_Custom/wwwroot/swagger-ui/custom.css
@@ -1,5 +1,5 @@
 .swagger-ui .topbar-wrapper .link img {
-    background: url(../docs/favicon.png) no-repeat;
+    background: url(../docs/favicon-light.png) no-repeat;
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
